update final markup

--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
     <link rel="stylesheet" href="style.css" />
     <title>Layout-39</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="/">Works</a>
+      <div class="logo"><img src="./assets/images/Logo.png" alt="logo" /></div>
+      <a href="/">Profile</a>
+    </header>
+    <main>
+      <div class="brain">
+        <p>BRI*</p>
+        <p>AN</p>
+      </div>
+      <div class="scroll_down">
+        <img src="./assets/images/icons/Scroll Down.svg" alt="down arrow" />
+      </div>
+      <div class="work">
+        <p>Selected Works</p>
+        <img src="./assets/images/Image.png" alt="" />
+      </div>
+    </main>
+  </body>
 </html>
